Fix bugs, expose more options to config

--- a/demo/config-server.json
+++ b/demo/config-server.json
@@ -3,5 +3,7 @@
   "certificate": {
     "key": "./server-key.pem",
     "cert": "./server-cert.pem"
-  }
+  },
+  "host": "localhost",
+  "port": 21759
 }
