--- a/demo/config-client.json
+++ b/demo/config-client.json
@@ -3,5 +3,7 @@
   "authentication": {
     "type": "token",
     "token": "18e8304a-db2c-4298-bf47-3e572aa9d9da"
-  }
+  },
+  "host": "localhost",
+  "port": 21759
 }
