--- a/demo/config-server.json
+++ b/demo/config-server.json
@@ -1,8 +1,11 @@
 {
   "appName": "demo-squabble-server",
   "certificate": {
-    "key": "./server-key.pem",
-    "cert": "./server-cert.pem"
+    "key": "./demo/server-key.pem",
+    "cert": "./demo/server-cert.pem"
+  },
+  "channels": {
+    "createOnJoin": false
   },
   "host": "localhost",
   "port": 21759
