Revert to public certificate trust

--- a/demo/config-client.json
+++ b/demo/config-client.json
@@ -4,9 +4,7 @@
     "type": "token",
     "token": "18e8304a-db2c-4298-bf47-3e572aa9d9da"
   },
-  "certificates": [
-    "demo/server-cert.pem"
-  ],
+  "debug": true,
   "host": "localhost",
   "port": 21759
 }
