--- a/demo/config-client.json
+++ b/demo/config-client.json
@@ -4,7 +4,7 @@
     "type": "token",
     "token": "18e8304a-db2c-4298-bf47-3e572aa9d9da"
   },
-  "certificates": [
+  "_certificates": [
     "demo/server-cert.pem"
   ],
   "debug": true,
